# NoobCalibration

./: .gitignore  CMakeLists.txt  README.md
data/: boxes.json  boxes_bat3D.json  calibration.json  cam_left_front.json  config.json  origin.json  points.json  points2.json  test.json  test.pcd  test2.json
data/ONCE/: CMakeLists.txt  README.md  boxes.json  origin.json  points.json  test.json
data/ONCE/include/: color_list.hpp
data/ONCE/script/: clean.sh  run_test.sh
data/ONCE/src/: once_test.cpp
include/: PnP.hpp  bat3D.hpp  color_list.hpp  extrinsic.hpp  intrinsic.hpp  projection.hpp
script/: run_PnP.sh  run_bat3D.sh  run_get_pixel.sh  run_projection.sh  run_projection_test.sh  run_test.sh  undistort.py
src/: PnP.cpp  bat3D.cpp  get_pixel.cpp  projection.cpp  projection_test.cpp  test.cpp
